@@ -20,7 +20,7 @@
    Boston, MA 02111-1307, USA.  */
 
 /* Use SSE registers if winnt.h contains information about them.  */
-#ifdef HAVE_CONTEXT_EXTENDED_REGISTERS
+#ifdef CONTEXT_EXTENDED_REGISTERS
 #define HAVE_SSE_REGS
 #else
 #undef HAVE_SSE_REGS
