@@ -1,3 +1,10 @@
+2003-09-12  Christopher Faylor  <cgf@redhat.com>
+
+	* win32-nat.c: Reorganize so that defines used by target headers are
+	actually defined by the system headers.
+	* config/i386/tm-cygwin.h: Check for CONTEXT_EXTENDED_REGISTERS rather
+	than HAVE_CONTEXT_EXTENDED_REGISTERS, since the latter actually exists.
+
 2003-09-12  Jim Blandy  <jimb@redhat.com>
 
 	* dbxread.c (read_dbx_symtab): Don't report an internal error if
